--- a/src/app/messages/mess-detail/mess-detail.component.css
+++ b/src/app/messages/mess-detail/mess-detail.component.css
@@ -1,6 +1,7 @@
 .infomation{
     overflow-y: scroll;
-    flex-grow: 7;
+    /* flex-grow: 7; */
+    flex: 7 0 90%;
     height: 200px;
 }
 table{
