--- a/src/app/messages/mess-list/mess-list.component.html
+++ b/src/app/messages/mess-list/mess-list.component.html
@@ -3,12 +3,13 @@
         <div class="folders">
             <ul>
                 <li *ngFor="let data of datas" routerLinkActive="choose">
-                    <a [routerLink]="[ { outlets: { outlet1: data.id}}]">{{data.id}}</a>
+                    <a [routerLink]="[{ outlets: { outlet1: data.id}}]">{{data.id}}</a>
                 </li>
             </ul>
         </div>
         <router-outlet name="outlet1"></router-outlet>
     </div>
     <div class="box2">
+        <router-outlet name="outlet2"></router-outlet>
     </div>
 </div>
