--- a/src/app/messages/mess-detail/mess-detail.component.html
+++ b/src/app/messages/mess-detail/mess-detail.component.html
@@ -10,10 +10,10 @@
         </thead>
         <tbody>
                 <tr *ngFor="let data of finalDatas" 
-                 [routerLink]="[{ outlets: { outlet2: [data.id]}}]"
+                 [routerLink]="['/messages',{ outlets: { outlet2: [data.id]}}]"
                  routerLinkActive="choose"
                  >
-                    <td><i class="fa-solid fa-circle"></i></td>
+                    <td (click)="test()"><i class="fa-solid fa-circle"></i></td>
                     <td>{{data.sender}}</td>
                     <td>{{data.subject}}</td>
                     <td>{{data.date1}}</td>
@@ -21,5 +21,5 @@
         </tbody>
     </table>
 </div>
-<router-outlet name="outlet2"></router-outlet> 
+<!-- <router-outlet name="outlet2"></router-outlet>  -->
 
