--- a/src/app/Components/header-component/header-component.component.css
+++ b/src/app/Components/header-component/header-component.component.css
@@ -18,7 +18,7 @@
     list-style: none;
     padding: 8px 8px 18px 8px;
     cursor: pointer;
-    color: #337ab7;
+    /* color: #337ab7; */
     border-radius: 8px 8px 0px 0px;
 }
 .box1 ul li a{
