--- a/src/app/Components/header-component/header-component.component.html
+++ b/src/app/Components/header-component/header-component.component.html
@@ -2,9 +2,12 @@
     <div class="container">
         <div class="box1">
             <ul>
-                <li routerLinkActive="choose" ><a routerLink="/messages">Messages</a></li>
-                <li routerLinkActive="choose" ><a routerLink="/contacts">Contacts</a></li>
-                <li routerLinkActive="choose" ><a routerLink="/preferences">Preferences</a></li>
+                <!-- <li routerLinkActive="choose"><a routerLink="/messages">Messages</a></li>
+                <li routerLinkActive="choose"><a routerLink="/contacts">Contacts</a></li>
+                <li routerLinkActive="choose"><a routerLink="/preferences">Preferences</a></li> -->
+                <li routerLinkActive="choose" routerLink="/messages">Messages</li>
+                <li routerLinkActive="choose" routerLink="/contacts">Contacts</li>
+                <li routerLinkActive="choose" routerLink="/preferences">Preferences</li>
             </ul>
         </div>
         <div class="box2">
