--- a/src/app/messages/mess-list/mess-list.component.css
+++ b/src/app/messages/mess-list/mess-list.component.css
@@ -10,7 +10,7 @@
     overflow-y: scroll;
     height: 200px;
     flex: 3 0 10%;
-    
+    max-width: 120px;
 }
 .folders ul{
     background-color: #ddd;
@@ -22,6 +22,7 @@
     cursor: pointer;
 /* text-align: center; */
 margin: 7px 0px;
+text-align: center;
 }
 .folders ul li i{
     margin-right: 3px;
